fix(slider): hide slider navigation arrows on mobile devices

--- a/src/apps/slider/static/slider/sync-slider.css
+++ b/src/apps/slider/static/slider/sync-slider.css
@@ -48,6 +48,10 @@
 
 }
 
+.slider-block__control {
+  display: none;
+}
+
 .slider-block__btn-prev:before {
   background-image: url("./images/arrow-left.svg");
 }
@@ -59,5 +63,9 @@
 @media (min-width: 992px) {
   .slider-block__slide--preview {
     padding: 10px;
+  }
+
+  .slider-block__control {
+    display: block;
   }
 }
